--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <img src="/images/image1.jpeg" alt="ma photo" id="profile-photo" class ="img-circle">
+        <img src="images/image1.jpeg" alt="ma photo" id="profile-photo" class ="img-circle">
         <h1>François NGUYEN</h1>
         <h2>Job title : Programmer</h2>
         <p>Description : Former Accountant for the past 6 years, my former employer externalized the company to Germany and asked me to go there. I went there for trial for a week, but the city and the job was not interested enough for me. I seized the opportunity to change my career and wanted to go into the web tech field. Now training at Le Wagon and enjoying myself !</p>
@@ -39,7 +39,7 @@
           <tbody>
             <tr>
               <td>
-                <img src="/images/football.jpeg" alt="ballon de foot">
+                <img src="images/football.jpeg" alt="ballon de foot">
               </td>
               <td>
                 <h3>
@@ -50,7 +50,7 @@
             </tr>
             <tr>
               <td>
-                <img src="/images/starcraft2.jpg" alt="starcraft 2 logo">
+                <img src="images/starcraft2.jpg" alt="starcraft 2 logo">
               </td>
               <td>
                 <h3>
@@ -61,7 +61,7 @@
             </tr>
             <tr>
               <td>
-                <img src="/images/tommy2.PNG" alt="tommy photo">
+                <img src="images/tommy2.PNG" alt="tommy photo">
               </td>
               <td>
                 <h3>
