make my profile prettier

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </tr>
             <tr>
               <td>
-                <img src="images/tommy2.PNG" alt="tommy photo">
+                <img src="images/tommy2.png" alt="tommy photo">
               </td>
               <td>
                 <h3>
